Fix to documentation (top rule)

--- a/syntactic_recognition.html
+++ b/syntactic_recognition.html
@@ -41,7 +41,6 @@ end
 <li><p><code>rule</code> : This defines a parsing rule within the grammar. It is followed by a name by which this rule can be referenced within other rules. It is then followed by a parsing expression defining the rule.</p></li>
 </ul>
 
-
 <p>A grammar may be surrounded by one or more nested <code>module</code> statements, which provides a namespace for the generated Ruby parser.</p>
 
 <p>Treetop will emit a module called <code>GrammarName</code> and a parser class called <code>GrammarNameParser</code> (in the module namespace, if specified).</p>
@@ -49,6 +48,10 @@ end
 <h1>Parsing Expressions</h1>
 
 <p>Each rule associates a name with a <em>parsing expression</em>. Parsing expressions are a generalization of vanilla regular expressions. Their key feature is the ability to reference other expressions in the grammar by name.</p>
+
+<p>
+Treetop parsers will try to match the first rule defined in the grammer, unless you pass an optional parameter to set a different top rule.
+</p>
 
 <h2>Terminal Symbols</h2>
 
