Fix to documentation (top rule typo)

--- a/syntactic_recognition.html
+++ b/syntactic_recognition.html
@@ -50,7 +50,7 @@ end
 <p>Each rule associates a name with a <em>parsing expression</em>. Parsing expressions are a generalization of vanilla regular expressions. Their key feature is the ability to reference other expressions in the grammar by name.</p>
 
 <p>
-Treetop parsers will try to match the first rule defined in the grammer, unless you pass an optional parameter to set a different top rule.
+Treetop parsers will try to match the first rule defined in the grammar, unless you pass an optional parameter to set a different top rule.
 </p>
 
 <h2>Terminal Symbols</h2>
